test_programs/compile_failure/noirc_frontend_tests_deny_oracle_attribute_on_non_unconstrained/src/main.nr

        #[oracle(foo)]
        pub fn foo(x: Field, y: Field) {
            assert(x != y);
        }
    